--- a/E-Commerce/Views/Home/Index.cshtml
+++ b/E-Commerce/Views/Home/Index.cshtml
@@ -2,7 +2,45 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="~/img/portada.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Expandí los horizontes...</h5>
+                <p>...de los peques que te rodean. Regalales páginas de mundos fantásticos, aprendizajes y personajes inolvidables.</p>
+                <a type="button" class="btn btn-warning" href="">Novelas y cuentos infantiles</a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/img/portada2.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>¿Te gusta leer en todos lados?</h5>
+                <p>Si sos de las personas que no pueden salir a la calle, las ediciones de bolsillo son para vos. Recorré los títulos que tenemos en este formato.</p>
+                <a type="button" class="btn btn-warning" href="">Ediciones de bolsillo</a>
+            </div>
+
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/img/portada3.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Viajá al siglo XIX...</h5>
+                <p>...y sumergite junto a Miss Manon en la nueva saga de Florencia Bonelli, poblada de intrigas, luchas de poder y romanticismo.</p>
+                <a type="button" class="btn btn-warning" href="">La casa Neville: la formidable señorita Manon</a>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
